--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,12 @@ h4 {
   justify-content: space-between;
   overflow: hidden;
 }
+.wrapper-1 {
+  height: 100%;
+  min-height: 100vh;
+  display: block;
+  overflow: hidden;
+}
 
 .main {
   flex-grow: 1;
