Правка карточки ЛК Ньютоника
Карточка Последние занятия из ЛК Родителя. Правка отступов в шапке карточки, правка лейблов, поля для звездочек или подписей

--- a/css/style-lk.css
+++ b/css/style-lk.css
@@ -880,7 +880,6 @@ input:-webkit-autofill {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    gap: 10px;
 }
 
 .card-lk_title-pay>span.payment-error {
@@ -1018,6 +1017,9 @@ input:-webkit-autofill {
     justify-content: center;
 }
 
+.label-height {
+    height: fit-content !important;
+}
 .card-lk_button>button {
     border: none;
     background: none;
