--- a/css/style-lk.css
+++ b/css/style-lk.css
@@ -2807,6 +2807,14 @@ table.operation-history>tbody .write-off td:nth-of-type(5) {
     background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2214%22%20height%3D%2211%22%20viewBox%3D%220%200%2014%2011%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%3Cpolygon%20fill%3D%22%23fff%22%20points%3D%2212%201%205%207.5%202%205%201%205.5%205%2010%2013%201.5%22%20%2F%3E%0A%3C%2Fsvg%3E%0A");
 }
 
+.slots_time>form>div>div>input.occupied.uk-checkbox:checked,
+.slots_time>form>div>div>input.occupied.uk-checkbox:disabled:checked,
+.slots_time>form>div>div>input.occupied.uk-checkbox:disabled {
+    background-color: var(--colorWhiteText);
+    border: 2px solid var(--colorBlockCardOne);
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2214%22%20height%3D%2211%22%20viewBox%3D%220%200%2014%2011%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%3Cpolygon%20fill%3D%22%2333C7A2%22%20points%3D%2212%201%205%207.5%202%205%201%205.5%205%2010%2013%201.5%22%20%2F%3E%0A%3C%2Fsvg%3E%0A");
+}
+
 .slot-info {
     padding: 30px 10px 0;
     font-family: 'Nunito-Bold';
