--- a/css/style-lk.css
+++ b/css/style-lk.css
@@ -2821,11 +2821,18 @@ table.operation-history>tbody .write-off td:nth-of-type(5) {
 .slots_time {
     display: grid;
     height: fit-content;
-    grid-template-columns: repeat(6, 1fr);
     gap: 10px;
     padding: 0 0 0 30px;
     border-left: 1px solid var(--main-color);
     align-items: center;
+}
+
+.slots_time_col_6 {
+    grid-template-columns: repeat(6, 1fr);
+}
+
+.slots_time_col_8 {
+    grid-template-columns: repeat(8, 1fr);
 }
 
 .slots_time>form>div {
@@ -3671,6 +3678,14 @@ ol.text-dogovora-items ol ol li::before {
         width: 100%;
     }
 }
+
+@container slots (max-width: 1000px) {
+    .slots_time_col_8 {
+        grid-template-columns: repeat(6, 1fr);
+    }
+
+}
+
 
 @container slots (max-width: 800px) {
     .slots_data {
